--- a/.classpath
+++ b/.classpath
@@ -6,12 +6,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/JavaThings/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31.jar">
+	<classpathentry kind="lib" path="C:/Users/Vincenzo/OneDrive/Documenti/JavaLibrary/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/JavaThings/json-simple-1.1.1.jar">
+	<classpathentry kind="lib" path="C:/Users/Vincenzo/OneDrive/Documenti/JavaLibrary/json-simple-1.1.1.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
