--- a/src/settings.json
+++ b/src/settings.json
@@ -1,5 +1,5 @@
 {
 	"databaseUrl": "jdbc:mysql://127.0.0.1:3306/javaDB",
 	"username": "root",
-	"password": "mySQLroot45.&ciao#."
+	"password": "MySQL85.#(6@"
 }
